MODREQMED-211: Fix sonarcloud alerts in PR