@@ -1,7 +1,6 @@
 package org.folio.mr.support;
 
 import static java.util.Collections.emptyList;
-import static java.util.stream.Collectors.toList;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertNotNull;
@@ -11,7 +10,6 @@ import java.util.UUID;
 import org.folio.mr.domain.entity.MediatedBatchRequest;
 import org.folio.mr.domain.entity.MediatedBatchRequestSplit;
 import org.junit.jupiter.api.Test;
-import org.junit.platform.commons.util.CollectionUtils;
 
 class ServiceUtilsTest {
 
@@ -30,19 +28,19 @@ class ServiceUtilsTest {
 
   @Test
   void toStream_positive() {
-    var actual = ServiceUtils.toStream(List.of(1, 2)).collect(toList());
+    var actual = ServiceUtils.toStream(List.of(1, 2)).toList();
     assertThat(actual).containsExactly(1, 2);
   }
 
   @Test
   void toStream_positive_nullValue() {
-    var actual = ServiceUtils.toStream(null).collect(toList());
+    var actual = ServiceUtils.toStream(null).toList();
     assertThat(actual).isEmpty();
   }
 
   @Test
   void toStream_positive_emptyCollection() {
-    var actual = ServiceUtils.toStream(emptyList()).collect(toList());
+    var actual = ServiceUtils.toStream(emptyList()).toList();
     assertThat(actual).isEmpty();
   }
 
